# davel

./: Appointment.cpp  Appointment.h  Appointmentholder.cpp  Appointmentholder.h  CMakeLists.txt  Doctor.cpp  Doctor.h  Patient.cpp  Patient.h  Paymentinfo.cpp  Paymentinfo.h  Paymentinterface.h  Person.cpp  Person.h  main.cpp
